# finances-file-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: action.yml  docker-image.yml
src/finances_file_service/: logger.py  main.py  params.py  producer.py  routes.py
src/finances_file_service/controllers/: process.py  upload.py
src/finances_file_service/files/: __init__.py  file_handler.py  handlers.py  local_handler.py  s3_handler.py
tests/: conftest.py  test_main.py
tests/files/processed/: test_get.py
tests/files/raw/: test_get.py
tests/process/: test_post.py
tests/upload/csv/: test_post.py
tests/upload/zip/: test_post.py
